--- a/app.json
+++ b/app.json
@@ -28,6 +28,12 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "extra": {
+      "eas": {
+        "projectId": "0b0d0ce2-a60b-41dc-aed1-37c4bb8a9e3e"
+      }
+    },
+    "owner": "galaxydeployer"
   }
 }
